--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,6 +1,10 @@
 <h2>Room: <br><%= @room.room_number %></h2>
 <%= link_to "Add new patient", new_room_patient_path(@room) %>
 
+<h3>Patient List</h3>
+<div>
+
 <% @room.patients.each do |patient| %>
-    <h3><%= link_to patient.room_number,  room_patient_path(patient, patient.id) %></h3>
+    <li>%= link_to patient.name, patient_path(patient) %></li>
 <% end %>
+</div>
