--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -5,6 +5,6 @@
 <div>
 
 <% @room.patients.each do |patient| %>
-    <li>%= link_to patient.name, patient_path(patient) %></li>
+    <li><%= link_to patient.full_name, patient_path(patient) %></li>
 <% end %>
 </div>
