--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,7 @@
 <h2> Add a new patient to Room: <%= @room.room_number %></h2>
 
+<%= render partial: '/errors', locals: { record: @patient } %>
+
 <%= form_for @patient do |f| %>
     <ul>
     <li><%= f.label "add a patient" %></li>
@@ -9,7 +11,6 @@
     <%= f.text_field :last_name %>
     <li><%= f.label "Assign a doctor" %></li>
     <%= f.collection_select :doctor_ids, Doctor.all, :id, :name %><br>
-    <li><%= f.label :last_name %></li>
     <li><%= f.label "Assign a nurse" %></li>
     <%= f.collection_select :nurse_ids, Nurse.all, :id, :name %><br>
     <li><%= f.label "Patient Status" %></li>
