--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Enter a new room to the system</h2>
-
+<%= render partial: '/errors', locals: { record: @room } %>
 
 <%= form_for @room do |p| %>
     <%= p.label :room_number %>
