--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,7 +4,7 @@
  
 <h3>Patient List</h3>
 <div>
-<%= link_to "Deceased Patients",  @patient.expired %>
+<%= link_to "Deceased Patients",  @patient.expired(:id) %>
 <% @room.patients.each do |patient| %>
     <li><%= link_to patient.full_name, patient_path(patient) %></li>
 <% end %>
