--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -2,13 +2,5 @@
 <li>specialty: <%= @doctor.specialty %><br></li>
 <li>phone number: <%= @doctor.phone_number %><br></li>
 
-<h3>Patients: </h3>
-<ul>
-<% @doctor.patients.each do |patient| %>
-    <li>Name: <%= patient.full_name %></li>
-    <li>Diagnosis: <%= patient.diagnosis %></li>
-    <li>Status: <%= patient.status %></li>
-    <li>Deceased: <%= patient.expired %></li><br>
-    <%# show room number by room_id %>
-<% end %>
-</ul>
+<h3>Patient List </h3>
+<%= render partial: '/patients', locals: {patients: @doctor.patients} %>
