--- a/app/views/nurses/show.html.erb
+++ b/app/views/nurses/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @nurse.name %></h1>
 <li>title: <%= @nurse.title %></li>
 <li>phone number: <%= @nurse.phone_number %><br></li>
-
+<h3>Patient List</h3>
 <%= render partial: '/patients', locals: {patients: @nurse.patients} %>
