new feature find nurse with most patients

--- a/app/views/nurses/index.html.erb
+++ b/app/views/nurses/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Nurse Directory</h1>
+
+<%= link_to "Nurse with most patients",  nurses_most_path %>
+
 <% @nurses.each do |nurse| %>
     <%= link_to nurse.name, nurse_path(nurse) %><br>
 <% end %>
